--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -15,6 +15,8 @@ en:
         with_key: Do you have your personal key?
     forgot_password:
       close_window: You can close this browser window once you have reset your password.
+    go_back_to_mobile_app: To continue, please go back to the %{friendly_name} app
+      on your smartphone or tablet and sign in.
     mfa:
       authenticator:
         accordion_header: Scan code with your mobile device
