Update go_back_to_mobile_app i18n entry
**Why**: Don't mention smartphone or tablet to keep it simple,
and also because they can sign in via the web app on the desktop
as well.

--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -32,7 +32,7 @@ en:
         with_key: Do you have your personal key?
     forgot_password:
       close_window: You can close this browser window once you have reset your password.
-      go_back_to_mobile_app: To continue, please go back to the %{friendly_name} app on your smartphone or tablet and sign in.
+      go_back_to_mobile_app: To continue, please go back to the %{friendly_name} app and sign in.
     password:
       forgot: >
         Don’t know your password? Reset it after confirming your email address.
