Update go_back_to_mobile_app i18n entry
**Why**: Don't mention smartphone or tablet to keep it simple,
and also because they can sign in via the web app on the desktop
as well.

--- a/config/locales/instructions/en.yml
+++ b/config/locales/instructions/en.yml
@@ -16,7 +16,7 @@ en:
     forgot_password:
       close_window: You can close this browser window once you have reset your password.
     go_back_to_mobile_app: To continue, please go back to the %{friendly_name} app
-      on your smartphone or tablet and sign in.
+      and sign in.
     mfa:
       authenticator:
         accordion_header: Scan code with your mobile device
