--- a/config/locales/devise/fr.yml
+++ b/config/locales/devise/fr.yml
@@ -121,11 +121,13 @@ fr:
       otp_delivery_preference:
         instruction: Vous pourrez changer votre choix la prochaine fois que vous vous
           connecterez
+        phone_unsupported: NOT TRANSLATED YET
         sms: Message texte (SMS)
         title: Comment souhaitez-vous recevoir votre code de sécurité?
         voice: Appel téléphonique
       otp_phone_label: Numéro de téléphone
       otp_phone_label_info: Cellulaire ou ligne fixe est acceptable
+      otp_phone_label_info_modile_only: NOT TRANSLATED YET
       otp_setup_html: "<strong>Chaque fois que vous vous connecterez,</strong> nous
         vous enverrons un code de sécurité à utilisation unique par message texte
         ou par appel téléphonique. Cela aide à protéger votre compte."
