Update Spanish translations
**Why**: Received translations from vendor

--- a/config/locales/activerecord/es.yml
+++ b/config/locales/activerecord/es.yml
@@ -7,5 +7,5 @@ es:
           attributes:
             value:
               cannot_disable_2fa_in_prod: La autenticación de dos factores no se puede
-                desactivar en la producción
-              invalid: El valor tiene que ser '1' o '0'
+                suspender en producción
+              invalid: El valor debe ser '1' o '0'
