--- a/config/locales/shared/es.yml
+++ b/config/locales/shared/es.yml
@@ -2,6 +2,6 @@
 es:
   shared:
     footer_lite:
-      gsa: Administración de Servicios Generales de EE. UU.
+      gsa: Administración General de Servicios de EE. UU.
     usa_banner:
-      official_site: Un sitio web oficial del gobierno de los Estados Unidos
+      official_site: Un sitio oficial del Gobierno de Estados Unidos
